@@ -9,21 +9,15 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.Pane;
-import javafx.stage.Modality;
 import javafx.stage.Stage;
-import controller.EditController;
-import model.dto.StaffDto.StaffDto;
 
 import java.util.Locale;
 import java.util.ResourceBundle;
-
 import java.io.IOException;
 
 public class Navigator {
     public final static String AdminMainForm = "AdminMainForm.fxml";
-    public final static String AddDoctor = "AddDoctor.fxml";
-    public final static String AddNurse = "AddNurse.fxml";
-    public final static String AddReceptionist = "AddReceptionist.fxml";
+    public final static String EditForm = "Edit.fxml";
     public final static String ReceptionistPage = "ReceptionistPage.fxml";
     public final static String NursePage = "NursePage.fxml";
     public final static String LoginPage = "Login.fxml";
@@ -46,11 +40,12 @@ public class Navigator {
         stage.show();
     }
 
-    //to navigate to a specific form
     public static void navigateToForm(ActionEvent event, String page, String formToDisplay) {
         try {
             FXMLLoader loader = new FXMLLoader(Navigator.class.getResource(page));
+            loader.setResources(bundle);
             Parent root = loader.load();
+
             NursePageController controller = loader.getController();
             controller.setFormToDisplay(formToDisplay);
             Node eventNode = (Node) event.getSource();
@@ -65,6 +60,7 @@ public class Navigator {
     public static void loadContent(AnchorPane contentPane, String fxmlFile) {
         try {
             FXMLLoader loader = new FXMLLoader(Navigator.class.getResource(fxmlFile));
+            loader.setResources(bundle);
             Node content = loader.load();
             contentPane.getChildren().setAll(content);
         } catch (IOException e) {
@@ -73,9 +69,9 @@ public class Navigator {
     }
 
     public static void handleLanguage() {
-        Locale degaultLocale = Locale.getDefault();
-        if (degaultLocale.getLanguage().equals("en")) {
-            Locale.setDefault(Locale.of("sq"));
+        Locale defaultLocale = Locale.getDefault();
+        if (defaultLocale.getLanguage().equals("en")) {
+            Locale.setDefault(new Locale("sq"));
         } else {
             Locale.setDefault(Locale.ENGLISH);
         }
@@ -83,8 +79,6 @@ public class Navigator {
     }
 
     private static Pane loadPane(String form) {
-
-        ResourceBundle bundle = ResourceBundle.getBundle("translations.content", Locale.getDefault());
         FXMLLoader loader = new FXMLLoader(Navigator.class.getResource(form), bundle);
         try {
             return loader.load();
@@ -92,5 +86,4 @@ public class Navigator {
             return null;
         }
     }
-
 }
